...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="5nQ-VB-nXu" id="qgX-4T-8MS"/>
                            <outlet property="delegate" destination="5nQ-VB-nXu" id="AQn-BU-yiA"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="λ Message Board" id="fwz-kK-dIC"/>
                    <connections>
                        <outlet property="threadTitleTextField" destination="72q-hR-yhN" id="ySs-gn-9tl"/>
                    </connections>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="n71-x9-bes" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
...
                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="249" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="duX-rG-AEh">
                                <rect key="frame" x="16" y="72" width="382" height="280.66666666666669"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter your name:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NEl-Se-Sz1">
                                        <rect key="frame" x="0.0" y="0.0" width="382" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalHuggingPriority="249" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="tpX-xP-KsX">
                                        <rect key="frame" x="0.0" y="41.999999999999986" width="382" height="238.66666666666663"/>
...
                            <constraint firstItem="duX-rG-AEh" firstAttribute="top" secondItem="Uch-WW-3au" secondAttribute="top" constant="16" id="9sH-ja-GVK"/>
                            <constraint firstItem="duX-rG-AEh" firstAttribute="height" secondItem="Hj8-j0-bJt" secondAttribute="height" multiplier="1/3" id="IyU-HP-M75"/>
                            <constraint firstItem="Uch-WW-3au" firstAttribute="trailing" secondItem="duX-rG-AEh" secondAttribute="trailing" constant="16" id="Uwo-mH-euL"/>
                            <constraint firstItem="duX-rG-AEh" firstAttribute="leading" secondItem="Uch-WW-3au" secondAttribute="leading" constant="16" id="yEE-IP-SDu"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="New Message" id="cEt-mi-t96">
                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="0pp-pH-R8r">
                            <connections>
                                <action selector="cancelTapped:" destination="BoB-4p-ZG3" id="TqF-bL-JPS"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Send" id="eC1-90-vuB">
                            <connections>
                                <action selector="sendMessage:" destination="BoB-4p-ZG3" id="k5g-wb-Dsb"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
