//
//  extracheckingtest.swift
//  Message BoardUITests
//
//  Created by Bhawnish Kumar on 5/15/20.
//  Copyright © 2020 Lambda School. All rights reserved.
//

import XCTest

class extracheckingtest: XCTestCase {

    override func setUpWithError() throws {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        XCUIApplication().launch()

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
        
        
    }

    override func tearDownWithError() throws {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    func testExample() throws {
        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
        XCUIApplication().navigationBars["new message"].buttons["Add"].tap()
        XCUIApplication().tables/*@START_MENU_TOKEN@*/.staticTexts["new message "]/*[[".cells.staticTexts[\"new message \"]",".staticTexts[\"new message \"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        
        let app = XCUIApplication()
        app.tables/*@START_MENU_TOKEN@*/.staticTexts["new message "]/*[[".cells.staticTexts[\"new message \"]",".staticTexts[\"new message \"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        
        let newMessageNavigationBar = app.navigationBars["new message"]
        newMessageNavigationBar.buttons["Add"].tap()
        app.textFields["Enter your name:"].tap()
        
        let textView = app.children(matching: .window).element(boundBy: 0).children(matching: .other).element.children(matching: .other).element.children(matching: .other).element.children(matching: .other).element.children(matching: .other).element.children(matching: .other).element.children(matching: .other).element.children(matching: .textView).element
        textView.tap()
        textView.tap()
        app.navigationBars["New Message"].buttons["Send"].tap()
        newMessageNavigationBar.buttons["λ Message Board"].tap()
                
    }

}
